--- a/Front end/index.html
+++ b/Front end/index.html
@@ -28,7 +28,7 @@
 
   <!-- FORM NOTA FISCAL -->
   <form id="formNF">
-    <h2>Nota Fiscal HelpTech Antunes</h2>     
+    <h2>Nota Fiscal </h2>     
     <label>Número: <input type="text" name="numero" required></label>
     <label>Cliente: <input type="text" name="cliente" required></label>
     <label>Serviço: <input type="text" name="servico" required></label>
